[index.html] Added information about the mailing list.

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,10 @@
 <div class="p">  See the  <a href="./doc/html/index.html"><i>OCamldoc</i> documentation</a>.  </div>
 <h2>License</h2>
 <div class="p">  The <a href="http://biocaml.org">Biocaml</a> library is distributed according to the <i>LGPL + linking exception</i> terms as defined in the <tt>LICENSE</tt> file.  </div>
+<h2>Mailing List</h2>
+A <a href="http://groups.google.com/group/biocaml">mailing list</a> is
+hosted on Google Groups. You can easily search the archives and
+subscribe there.
 <h2>People</h2>
 <div class="p">  
 <ul>
