[index.html] Fixed indentation and other minor formatting changes in the source code. Does not affect generated page.

--- a/src/index.html
+++ b/src/index.html
@@ -1,39 +1,58 @@
 <!DOCTYPE html
     PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-    <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-    <!-- Generated with BraceTax -->
-    <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link rel="stylesheet"  type="text/css" href="biocaml.css" />
-<title>Biocaml</title>
-    </head>
-    <body>
-<div class="header">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <link rel="stylesheet"  type="text/css" href="biocaml.css" />
+  <title>Biocaml</title>
+</head>
 
+<body>
+
+<div class="header">
   <h1>Biocaml</h1>
   <div class="subtitle">The OCaml Bioinformatics Library</div>
 </div> <!-- END HEADER -->
-<div class="p">
-  </div>
+
+<div class="p"></div>
+
 <h2>Source Code</h2>
-<div class="p">  <i>Biocaml</i> is hosted on GitHub: <a href="https://github.com/agarwal/biocaml/">https://github.com/agarwal/biocaml/</a>. </div>
-<div class="p">  </div>
+<div class="p">
+<i>Biocaml</i> is hosted on
+GitHub: <a href="https://github.com/agarwal/biocaml/">https://github.com/agarwal/biocaml/</a>.
+</div>
+
+<div class="p"></div>
+
 <h2>Documentation</h2>
-<div class="p">  See the  <a href="./doc/html/index.html"><i>OCamldoc</i> documentation</a>.  </div>
+<div class="p">
+See the <a href="./doc/html/index.html"><i>OCamldoc</i>
+documentation</a>.
+</div>
+
 <h2>License</h2>
-<div class="p">  The <a href="http://biocaml.org">Biocaml</a> library is distributed according to the <i>LGPL + linking exception</i> terms as defined in the <tt>LICENSE</tt> file.  </div>
+<div class="p">
+The <a href="http://biocaml.org">Biocaml</a> library is distributed
+according to the <i>LGPL + linking exception</i> terms as defined in
+the <tt>LICENSE</tt> file.
+</div>
+
 <h2>Mailing List</h2>
+<div class="p">
 A <a href="http://groups.google.com/group/biocaml">mailing list</a> is
 hosted on Google Groups. You can easily search the archives and
 subscribe there.
+</div>
+
 <h2>People</h2>
 <div class="p">  
 <ul>
- <li> <a href="http://ashishagarwal.org">Ashish Agarwal</a> (Main developer) </li>
-<li> <a href="http://genome.jouy.inra.fr/~pveber/">Philippe Veber</a> </li>
-<li> <a href="http://seb.mondet.org">Sebastien Mondet</a> </li>
+ <li><a href="http://ashishagarwal.org">Ashish Agarwal</a> (Main developer)</li>
+ <li><a href="http://genome.jouy.inra.fr/~pveber/">Philippe Veber</a></li>
+ <li><a href="http://seb.mondet.org">Sebastien Mondet</a></li>
 </ul>
-   </div>
+</div>
+
 </body>
 </html>
