--- a/src/index.html
+++ b/src/index.html
@@ -54,5 +54,10 @@ subscribe there.
 </ul>
 </div>
 
+<a href="http://oasis.forge.ocamlcore.org/">
+ <img
+ src="http://oasis.forge.ocamlcore.org/powered-by-oasis.png"
+ alt="OASIS" style="border: none;" />
+</a>
 </body>
 </html>
