[ADD] Logo "ocaml powered" from François Berenger & Florent Monnier

--- a/src/index.html
+++ b/src/index.html
@@ -54,6 +54,11 @@ subscribe there.
 </ul>
 </div>
 
+<a href="http://caml.inria.fr/ocaml/">
+ <img
+ src="http://www.linux-nantes.org/~fmonnier/ocaml/powered-by-ocaml.152x58.gif"
+ alt="OCaml" style="border: none;" />
+</a>
 <a href="http://oasis.forge.ocamlcore.org/">
  <img
  src="http://oasis.forge.ocamlcore.org/powered-by-oasis.png"
