--- a/src/index.html
+++ b/src/index.html
@@ -57,12 +57,12 @@ subscribe there.
 <a href="http://caml.inria.fr/ocaml/">
  <img
  src="http://www.linux-nantes.org/~fmonnier/ocaml/powered-by-ocaml.152x58.gif"
- alt="OCaml" style="border: none;" />
-</a>
+ alt="OCaml" style="border: none;" /></a>
+
 <a href="http://oasis.forge.ocamlcore.org/">
  <img
  src="http://oasis.forge.ocamlcore.org/powered-by-oasis.png"
- alt="OASIS" style="border: none;" />
-</a>
+ alt="OASIS" style="border: none;" /></a>
+
 </body>
 </html>
