Added Francois Berenger to list of people.

--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,7 @@ subscribe there.
  <li><a href="http://ashishagarwal.org">Ashish Agarwal</a> (Main developer)</li>
  <li><a href="http://genome.jouy.inra.fr/~pveber/">Philippe Veber</a></li>
  <li><a href="http://seb.mondet.org">Sebastien Mondet</a></li>
+ <li><a href="http://www.riken.jp/zhangiru/en_software.html">Francois Berenger</a></li>
 </ul>
 </div>
 
