Master repo now listed as the one in our new Biocaml github organization.

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
 <h2>Source Code</h2>
 <div class="p">
 <i>Biocaml</i> is hosted on
-GitHub: <a href="https://github.com/agarwal/biocaml/">https://github.com/agarwal/biocaml/</a>.
+GitHub: <a href="https://github.com/biocaml/biocaml/">https://github.com/biocaml/biocaml/</a>.
 </div>
 
 <div class="p"></div>
