Added link to download release tarballs.

--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,9 @@ See the <a href="./doc/html/index.html"><i>OCamldoc</i>
 documentation</a>.
 </div>
 
+<h2>Releases</h2>
+<a href="https://github.com/biocaml/biocaml/downloads">Download</a> official releases.
+
 <h2>License</h2>
 <div class="p">
 The <a href="http://biocaml.org">Biocaml</a> library is distributed
