--- a/src/index.html
+++ b/src/index.html
@@ -27,8 +27,8 @@ GitHub: <a href="https://github.com/biocaml/biocaml/">https://github.com/biocaml
 
 <h2>Documentation</h2>
 <div class="p">
-See the <a href="./doc/html/index.html"><i>OCamldoc</i>
-documentation</a>.
+  <p>Latest release - <a href="./doc/latest/api/index.html">API documentation</a></p>
+  <p><a href="./doc">Older releases</a></p>
 </div>
 
 <h2>Releases</h2>
