Slightly adjusted styling.

--- a/src/index.html
+++ b/src/index.html
@@ -27,8 +27,8 @@ GitHub: <a href="https://github.com/biocaml/biocaml/">https://github.com/biocaml
 
 <h2>Documentation</h2>
 <div class="p">
-  <p>Latest release - <a href="./doc/latest/api/index.html">API documentation</a></p>
-  <p><a href="./doc">Older releases</a></p>
+  <div>Latest release - <a href="./doc/latest/api/index.html">API documentation</a></div>
+  <div><a href="./doc">Older releases</a></div>
 </div>
 
 <h2>Releases</h2>
