--- a/src/index.html
+++ b/src/index.html
@@ -41,12 +41,14 @@ according to the <i>LGPL + linking exception</i> terms as defined in
 the <tt>LICENSE</tt> file.
 </div>
 
-<h2>Mailing List</h2>
-<div class="p">
-A <a href="http://groups.google.com/group/biocaml">mailing list</a> is
-hosted on Google Groups. You can easily search the archives and
-subscribe there.
-</div>
+<h2>Google Group</h2>
+<iframe id="forum_embed"
+  src="javascript:void(0)"
+  scrolling="no"
+  frameborder="0"
+  width="900"
+  height="700">
+</iframe>
 
 <h2>People</h2>
 <div class="p">  
@@ -68,6 +70,13 @@ subscribe there.
  <img
  src="http://oasis.forge.ocamlcore.org/powered-by-oasis.png"
  alt="OASIS" style="border: none;" /></a>
+
+<script type="text/javascript">
+  document.getElementById('forum_embed').src =
+     'https://groups.google.com/forum/embed/?place=forum/biocaml'
+     + '&showsearch=true&showpopout=true&showtabs=false'
+     + '&parenturl=' + encodeURIComponent(window.location.href);
+</script>
 
 </body>
 </html>
