index.html: fix links to api doc

--- a/src/index.html
+++ b/src/index.html
@@ -27,8 +27,9 @@ GitHub: <a href="https://github.com/biocaml/biocaml/">https://github.com/biocaml
 
 <h2>Documentation</h2>
 <div class="p">
-  <div>Latest release - <a href="./doc/latest/api/index.html">API documentation</a></div>
-  <div><a href="./doc">Older releases</a></div>
+  <div><a href="./doc/dev/api/index.html">development branch</a></div>
+  <div><a href="./doc/v0.1.0/api/index.html">v0.1.0 (latest release)</a></div>
+  <div><a href="./doc">older releases</a></div>
 </div>
 
 <h2>Releases</h2>
