unembed google group
This caused clutter and the page loaded too slowly.

--- a/src/index.html
+++ b/src/index.html
@@ -42,14 +42,12 @@ according to the <i>LGPL + linking exception</i> terms as defined in
 the <tt>LICENSE</tt> file.
 </div>
 
-<h2>Google Group</h2>
-<iframe id="forum_embed"
-  src="javascript:void(0)"
-  scrolling="no"
-  frameborder="0"
-  width="900"
-  height="700">
-</iframe>
+<h2>Mailing Lists</h2>
+<div class="p">
+A <a href="https://groups.google.com/d/forum/biocaml">mailing list</a> is
+hosted on Google Groups. You can easily search the archives and
+subscribe there.
+</div>
 
 <h2>People</h2>
 <div class="p">  
@@ -71,13 +69,6 @@ the <tt>LICENSE</tt> file.
  <img
  src="http://oasis.forge.ocamlcore.org/powered-by-oasis.png"
  alt="OASIS" style="border: none;" /></a>
-
-<script type="text/javascript">
-  document.getElementById('forum_embed').src =
-     'https://groups.google.com/forum/embed/?place=forum/biocaml'
-     + '&showsearch=true&showpopout=true&showtabs=false'
-     + '&parenturl=' + encodeURIComponent(window.location.href);
-</script>
 
 </body>
 </html>
