add info on new biocaml-commits mailing list

--- a/src/index.html
+++ b/src/index.html
@@ -49,6 +49,15 @@ hosted on Google Groups. You can easily search the archives and
 subscribe there.
 </div>
 
+<div>
+There is also a <a
+     "https://groups.google.com/d/forum/biocaml-commits"
+href="https://groups.google.com/d/forum/biocaml-commits">mailing list
+for commits</a>. Subscribe to this list if you want to be notified
+every time the <a href="https://github.com/biocaml/biocaml.org">main
+github repo</a> is pushed to.</p>
+</div>
+
 <h2>People</h2>
 <div class="p">  
 <ul>
