remove self-reference

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@ GitHub: <a href="https://github.com/biocaml/biocaml/">https://github.com/biocaml
 
 <h2>License</h2>
 <div class="p">
-The <a href="http://biocaml.org">Biocaml</a> library is distributed
+The Biocaml library is distributed
 according to the <i>LGPL + linking exception</i> terms as defined in
 the <tt>LICENSE</tt> file.
 </div>
