--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@ There is also a <a
 href="https://groups.google.com/d/forum/biocaml-commits">mailing list
 for commits</a>. Subscribe to this list if you want to be notified
 every time the <a href="https://github.com/biocaml/biocaml.org">main
-github repo</a> is pushed to.</p>
+github repo</a> is pushed to.
 </div>
 
 <h2>People</h2>
