replace inria link to ocaml.org

--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@ github repo</a> is pushed to.
 </ul>
 </div>
 
-<a href="http://caml.inria.fr/ocaml/">
+<a href="http://ocaml.org">
  <img
  src="http://www.linux-nantes.org/~fmonnier/ocaml/powered-by-ocaml.152x58.gif"
  alt="OCaml" style="border: none;" /></a>
