self-host downloads
GitHub [discontinued](https://github.com/blog/1302-goodbye-uploads)
this feature.

--- a/src/index.html
+++ b/src/index.html
@@ -32,8 +32,12 @@ GitHub: <a href="https://github.com/biocaml/biocaml/">https://github.com/biocaml
   <div><a href="./doc">older releases</a></div>
 </div>
 
-<h2>Releases</h2>
-<a href="https://github.com/biocaml/biocaml/downloads">Download</a> official releases.
+<h2>Downloads</h2>
+<div>
+  Version 0.1.0:
+  <a href="downloads/biocaml-0.1.0.tgz">tgz</a>
+  (<a href="http://biocaml.org/downloads/biocaml-0.1.0.tgz.md5">md5</a>)
+</div>
 
 <h2>License</h2>
 <div class="p">
