add information on release 0.2.0

--- a/src/index.html
+++ b/src/index.html
@@ -28,11 +28,17 @@ GitHub: <a href="https://github.com/biocaml/biocaml/">https://github.com/biocaml
 <h2>Documentation</h2>
 <div class="p">
   <div><a href="./doc/dev/api/index.html">development branch</a></div>
-  <div><a href="./doc/v0.1.0/api/index.html">v0.1.0 (latest release)</a></div>
+  <div><a href="./doc/v0.2.0/api/index.html">v0.2.0 (latest release)</a></div>
+  <div><a href="./doc/v0.1.0/api/index.html">v0.1.0</a></div>
   <div><a href="./doc">older releases</a></div>
 </div>
 
 <h2>Downloads</h2>
+<div>
+  Version 0.2.0:
+  <a href="downloads/biocaml-0.2.0.tgz">tgz</a>
+  (<a href="http://biocaml.org/downloads/biocaml-0.2.0.tgz.md5">md5</a>)
+</div>
 <div>
   Version 0.1.0:
   <a href="downloads/biocaml-0.1.0.tgz">tgz</a>
