link to developers' wiki

--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,10 @@ GitHub: <a href="https://github.com/biocaml/biocaml/">https://github.com/biocaml
   <div><a href="./doc">older releases</a></div>
 </div>
 
+<div class="p">
+  <p>Developers' <a href="https://github.com/biocaml/biocaml/wiki">wiki</a>.</p>
+</div>
+
 <h2>Downloads</h2>
 <div>
   Version 0.3.0:
