minor format fix

--- a/src/index.html
+++ b/src/index.html
@@ -70,11 +70,11 @@ subscribe there.
 </div>
 
 <div>
-There is also a <a
+<p>There is also a <a
 href="https://groups.google.com/d/forum/biocaml-commits">mailing list
 for commits</a>. Subscribe to this list if you want to be notified
 every time the <a href="https://github.com/biocaml/biocaml.org">main
-github repo</a> is pushed to.
+github repo</a> is pushed to.</p>
 </div>
 
 <h2>People</h2>
