--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@ GitHub: <a href="https://github.com/biocaml/biocaml/">https://github.com/biocaml
 <h2>Documentation</h2>
 <div class="p">
   <div><a href="./doc/dev/api/index.html">development branch</a></div>
-  <div><a href="./doc/v0.3.0/api/index.html">v0.3.0 (latest release)</a></div>
+  <div><a href="./doc/v0.3.1/api/index.html">v0.3.1 (latest release)</a></div>
   <div><a href="./doc/v0.2.0/api/index.html">v0.2.0 </a></div>
   <div><a href="./doc/v0.1.0/api/index.html">v0.1.0</a></div>
   <div><a href="./doc">older releases</a></div>
@@ -39,6 +39,11 @@ GitHub: <a href="https://github.com/biocaml/biocaml/">https://github.com/biocaml
 </div>
 
 <h2>Downloads</h2>
+<div>
+  Version 0.3.1:
+  <a href="https://github.com/biocaml/biocaml/archive/0.3.1.tar.gz">tar.gz</a>
+  (<a href="downloads/biocaml-0.3.1.tar.gz.md5">md5</a>)
+</div>
 <div>
   Version 0.3.0:
   <a href="https://github.com/biocaml/biocaml/archive/0.3.0.tar.gz">tar.gz</a>
